templates/grafana/030-Deployment-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: enmasse
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enmasse
      name: grafana
  template:
    metadata:
      labels:
        app: enmasse
        name: grafana
    spec:
      containers:
      - name: grafana
        image: ${GRAFANA_IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        ports:
        - containerPort: 3000
          name: grafana
        volumeMounts:
        - mountPath: /etc/grafana/provisioning
          name: grafana-config
          readOnly: true
        - mountPath: /etc/grafana/dashboards
          name: grafana-dashboards
          readOnly: true
        - mountPath: /usr/share/grafana/data
          name: grafana-data
          readOnly: false
      volumes:
      - name: grafana-config
        configMap:
          name: grafana-config
          items:
          - key: dashboard.yaml
            path: dashboards/dashboard.yaml
          - key: datasource.yaml
            path: datasources/datasource.yaml
      - name: grafana-dashboards
        configMap:
          name: grafana-dashboards
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
