templates/grafana/020-Service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: enmasse
  name: grafana
spec:
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
  selector:
    name: grafana
