templates/grafana/060-Route-grafana.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: grafana
spec:
  port:
    targetPort: grafana
  tls:
    termination: edge
  to:
    kind: Service
    name: grafana
